# sec_news_app

./: .env.example  .gitignore  LICENSE  README.md  crypto_research_radar_codex_instructions.md  pyproject.toml
.github/workflows/: collect.yml  test.yml
config/: keywords.yaml  scoring.yaml  sources.yaml
data/: seen_items.json
src/crypto_radar/: __init__.py  classifier.py  config.py  deduplicate.py  logging_config.py  main.py  models.py  normalize.py  scorer.py  state.py
src/crypto_radar/collectors/: __init__.py  arxiv.py  base.py  rss.py
src/crypto_radar/outputs/: __init__.py  notion.py  slack.py
src/crypto_radar/utils/: dates.py  urls.py
tests/: test_classifier.py  test_deduplicate.py  test_main.py  test_normalize.py  test_scorer.py  test_slack.py  test_state.py
